prikaz apartmana za neregistrovanog korisnika

--- a/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/detailed-view-base/detailed-view-base.component.html
@@ -16,5 +16,7 @@
   </div>
 </div>
 
-<button class="reserve-button" (click)="reserve()">Reserve</button>
+<div *ngIf="userRole === 'GUEST'" >
+  <button class="reserve-button" (click)="reserve()">Reserve</button>
+</div>
 
